force client use java 17